--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "datasets>=3.3.2",
     "numpy>=2.2.3",
     "pandas>=2.2.3",
     "torch>=2.6.0",
